// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Paragraph" with align center 1`] = `
<p
  class="sc-bdVaJa flMesl"
>
  Paragraph
</p>
`;

exports[`renders "Paragraph" with l prop 1`] = `
<p
  class="sc-bdVaJa gisIDb"
>
  Paragraph
</p>
`;

exports[`renders "Paragraph" with no props 1`] = `
<p
  class="sc-bdVaJa gjUjvw"
>
  Paragraph
</p>
`;

exports[`renders "Paragraph" with s prop 1`] = `
<p
  class="sc-bdVaJa kHjWkw"
>
  Paragraph
</p>
`;
